...
              key: const Key(KEY_ATUALIZAR_BD_CONFIG_BUTTON),
              style: ButtonStyle(
                padding:
                MaterialStatePropertyAll(style.buttonMarginDefault),
              ),
              child: Text(
                'ATUALIZAR DADOS',
                style: style.textFieldTextStyle,
              ),
            ),
          ),
        ],
      ),
...
